--- a/index.html
+++ b/index.html
@@ -129,6 +129,35 @@
       color: white;
       font-size: 4vw;
     }
+    #whiteText{
+      width: 90vw;
+      margin-left: 5vw;
+      margin-top: 2vw;
+      text-align: center;
+      color: white;
+      font-size: 4vw;
+    }
+    #blueText{
+      width: 90vw;
+      margin-left: 5vw;
+      margin-top: 2vw;
+      text-align: center;
+      color: white;
+      font-size: 4vw;
+    }
+    #wide{
+      width: 60vw;
+      margin-top: 3vw;
+      margin-left: 20vw;
+    }
+    #tall{
+    }
+    #skinny{
+      width: 20vw;
+      margin-top: 3vw;
+      margin-left: 10vw;
+      height: 60vw;
+    }
   </style>
 </head>
 
@@ -139,8 +168,15 @@
       <script>
         document.write('<h1 id="header">PLAYTIME SPORTS GAMES, LLC.</h1>');
         document.write('<h1 id="tagline">FOR INDOOR AND OUTDOOR EVENTS</h1>');
-        document.write('<div class="contact"><a href="mailto:damondavis07@comcast.net" id="contact">EMAIL damondavis07@comcast.net &nbsp</a><a href="https://playtimesportsgames.github.io/Home/" id="contact">&nbsp HOME &nbsp</a>  &nbsp (615) 415-4244</div>');
-        document.write('<div id="titleInfo">This will be the title info.</div>');
+        document.write('<div class="contact"><a href="mailto:damondavis07@comcast.net" id="contact">EMAIL damondavis07@comcast.net &nbsp</a><a href="https://cdn.rawgit.com/playtimeSportsGames/main/9b4e7e83/index.html" id="contact">&nbsp HOME &nbsp</a>  &nbsp (615) 415-4244</div>');
+
+        document.write('<p id="whiteText">Media Net</p>');
+        document.write('<p id="blueText">5 Foot By 10 Foot Net Backdrop</p>');
+        document.write('<p id="blueText">To Hang Your Banners And Signs</p>');
+        document.write('<img src="net1.png" id="wide">');
+        document.write('<p id="blueText">With Upholstered Bases At Each End</p>');
+        document.write('<p id="blueText">Choose From Blue, Red, Or Purple</p>');
+        document.write('<img src="net2.png" id="wide">');
         document.write('<p><br><br></p>')
       </script>
 
